--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.sunshine.app.MainActivity" />
         </activity>
-        <!-- TODO Passo 4: registrar o content provider -->
+
+        <!-- TODO Registrar o Content Provider -->
         <provider
             android:authorities="com.example.android.sunshine.app"
             android:name=".data.WeatherProvider" />
